added new tech skills

--- a/index.html
+++ b/index.html
@@ -60,11 +60,14 @@
                 <li>MongoDB</li>
                 <li>EXPRESS</li>
                 <li>CSS</li>
+                <li>C</li>
                 <li>PYTHON</li>
                 <li>HTML</li>
                 <li>JEST</li>
                 <li>SQL</li>
                 <li>ARDUINO</li>
+                <li>RASPBERRY PI</li>
+                <li>GIT VERSION CONTROL</li>
             </ol>
         </section>
 
