fixed name, about me subsection, other minor changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="dropdown">
             <button class="dropbtn">CONTACT ME</button>
             <div class="dropdown-content">
-            <a href="https://www.linkedin.com/in/broderick-howell-43b0161a4/" target="_blank">LINKEDIN</a>
+            <a href="https://www.linkedin.com/in/brodi-howell-43b0161a4/" target="_blank">LINKEDIN</a>
             <a href="https://github.com/ZeroBitzz" target="_blank">GITHUB</a>
             </div>
         </div>
@@ -29,15 +29,13 @@
 
     <!-- MAIN PAGE DATA -->
     <pre id="name">
-        ______          ____                     __                             __         
-        /\__  _\        /\  _`\                  /\ \                 __        /\ \        
-        \/_/\ \/        \ \ \L\ \  _ __   ___    \_\ \     __   _ __ /\_\    ___\ \ \/'\    
-           \ \ \         \ \  _ <'/\`'__\/ __`\  /'_` \  /'__`\/\`'__\/\ \  /'___\ \ , <    
-            \_\ \__  __   \ \ \L\ \ \ \//\ \L\ \/\ \L\ \/\  __/\ \ \/ \ \ \/\ \__/\ \ \\`\  
-            /\_____\/\ \   \ \____/\ \_\\ \____/\ \___,_\ \____\\ \_\  \ \_\ \____\\ \_\ \_\
-            \/_____/\ \/    \/___/  \/_/ \/___/  \/__,_ /\/____/ \/_/   \/_/\/____/ \/_/\/_/
-                     \/                                                                     
-                                                                                            
+        ____                     __          __  __                              ___    ___      
+        /\  _`\                  /\ \  __    /\ \/\ \                            /\_ \  /\_ \     
+        \ \ \L\ \  _ __   ___    \_\ \/\_\   \ \ \_\ \    ___   __  __  __     __\//\ \ \//\ \    
+         \ \  _ <'/\`'__\/ __`\  /'_` \/\ \   \ \  _  \  / __`\/\ \/\ \/\ \  /'__`\\ \ \  \ \ \   
+          \ \ \L\ \ \ \//\ \L\ \/\ \L\ \ \ \   \ \ \ \ \/\ \L\ \ \ \_/ \_/ \/\  __/ \_\ \_ \_\ \_ 
+           \ \____/\ \_\\ \____/\ \___,_\ \_\   \ \_\ \_\ \____/\ \___x___/'\ \____\/\____\/\____\
+            \/___/  \/_/ \/___/  \/__,_ /\/_/    \/_/\/_/\/___/  \/__//__/   \/____/\/____/\/____/
             <button class="blinker"></button>
     </pre>
 
@@ -45,9 +43,7 @@
         <!-- ABOUT ME SUBSECTION -->
         <section class="subsection">
             <h2 class="subsection-h2">ABOUT ME</h2>
-            <p>I am Broderick, an aspiring physicist/engineer, I have a passion for understanding the universe, building gadgets, and experiencing life. 
-                My love for learning and coffee fuel my dedication to succeed in the fields of science.
-            </p>
+            <p>I am Brodi Howell, an engineer. I love cats, coffee, sushi, video games, reading, playing piano, building robots, app development, making gadgets, and mathematics.  </p>
         </section>
 
         <!-- TECH SKILLS SUBSECTION -->
