added new rgb-guesser game link

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <li><a href="https://eloquent-haupia-e71754.netlify.app/" target="_blank">javascript-quiz</a></li>
                 <li><a href="https://precious-nougat-884d79.netlify.app/" target="_blank">work-scheduler</a></li>
                 <li><a href="https://github.com/ZeroBitzz/read-me-generator" target="_blank">read-me-generator</a></li>
+                <li><a href="https://gentle-kheer-60f8f5.netlify.app/" target="_blank">rgb-guesser</a></li>
             </ul>
         </section>
     </section>
