removed name from p tag

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- ABOUT ME SUBSECTION -->
         <section class="subsection">
             <h2 class="subsection-h2">ABOUT ME</h2>
-            <p>I am Brodi Howell, an engineer. I love cats, coffee, sushi, video games, reading, building robots, app development, making gadgets, and mathematics.  </p>
+            <p>I am Howell, an engineer. I love cats, coffee, sushi, video games, reading, building robots, app development, making gadgets, and mathematics.  </p>
         </section>
 
         <!-- TECH SKILLS SUBSECTION -->
