--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Broderick</title>
+    <title>Howell</title>
     <link rel="icon" href="./assests/images/floppy disk.png">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="./assests/styles/style.css" />
@@ -21,7 +21,7 @@
         <div class="dropdown">
             <button class="dropbtn">CONTACT ME</button>
             <div class="dropdown-content">
-            <a href="https://www.linkedin.com/in/brodi-howell-43b0161a4/" target="_blank">LINKEDIN</a>
+            <a href="https://www.linkedin.com/in/howell-43b0161a4/" target="_blank">LINKEDIN</a>
             <a href="https://github.com/ZeroBitzz" target="_blank">GITHUB</a>
             </div>
         </div>
