reset personal website

--- a/index.html
+++ b/index.html
@@ -1,96 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Howell</title>
+    <title>Broderick Howell</title>
     <link rel="icon" href="./assests/images/floppy disk.png">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="./assests/styles/style.css" />
-    <script src="./assests/scripts/script.js"></script>
+    <!-- <script src="./assests/scripts/script.js"></script> -->
   </head>
   <body>
 
-    <!-- CRT MONITER EFFECT -->
-    <div id="crt"> 
-        <div class="scanline"></div>
-    </div>
-    <div class="scanline"></div>
-
-    <!-- HEADER/NAVBAR -->
-    <header>
-        <span>VERSION 3.0 (2002-2505)</span>
-        <div class="dropdown">
-            <button class="dropbtn">CONTACT ME</button>
-            <div class="dropdown-content">
-            <a href="https://www.linkedin.com/in/howell-43b0161a4/" target="_blank">LINKEDIN</a>
-            <a href="https://github.com/ZeroBitzz" target="_blank">GITHUB</a>
-            </div>
-        </div>
-    </header>
-
-    <!-- MAIN PAGE DATA -->
-    <pre id="name">
-        __  __                              ___    ___      
-        /\ \/\ \                            /\_ \  /\_ \     
-        \ \ \_\ \    ___   __  __  __     __\//\ \ \//\ \    
-         \ \  _  \  / __`\/\ \/\ \/\ \  /'__`\\ \ \  \ \ \   
-          \ \ \ \ \/\ \L\ \ \ \_/ \_/ \/\  __/ \_\ \_ \_\ \_ 
-           \ \_\ \_\ \____/\ \___x___/'\ \____\/\____\/\____\
-            \/_/\/_/\/___/  \/__//__/   \/____/\/____/\/____/
-            <button class="blinker"></button>
-    </pre>
-
-    <section id="main-content-section">
-        <!-- ABOUT ME SUBSECTION -->
-        <section class="subsection">
-            <h2 class="subsection-h2">ABOUT ME</h2>
-            <p>I am Howell, an engineer. I love cats, coffee, sushi, video games, reading, building robots, app development, making gadgets, and mathematics.  </p>
-        </section>
-
-        <!-- TECH SKILLS SUBSECTION -->
-        <section class="subsection">
-            <h2 class="subsection-h2">TECH SKILLS</h2>
-            <ol>
-                <li>Javascript</li>
-                <li>React</li>
-                <li>Node JS</li>
-                <li>MongoDB</li>
-                <li>EXPRESS</li>
-                <li>CSS</li>
-                <li>C</li>
-                <li>PYTHON</li>
-                <li>HTML</li>
-                <li>JEST</li>
-                <li>SQL</li>
-                <li>ARDUINO</li>
-                <li>RASPBERRY PI</li>
-                <li>GIT VERSION CONTROL</li>
-            </ol>
-        </section>
-
-        <!-- PROJECTS SUBSECTION -->
-        <section class="subsection">
-            <h2 class="subsection-h2">PROJECT LINKS</h2>
-            <ul>
-                <li><a href="https://unique-froyo-495763.netlify.app/" target="_blank">password-generator</a></li>
-                <li><a href="https://serene-narwhal-b92afd.netlify.app/" target="_blank">weather-finder</a></li>
-                <li><a href="https://eloquent-haupia-e71754.netlify.app/" target="_blank">javascript-quiz</a></li>
-                <li><a href="https://precious-nougat-884d79.netlify.app/" target="_blank">work-scheduler</a></li>
-                <li><a href="https://github.com/ZeroBitzz/read-me-generator" target="_blank">read-me-generator</a></li>
-                <li><a href="https://gentle-kheer-60f8f5.netlify.app/" target="_blank">rgb-guesser</a></li>
-            </ul>
-        </section>
-    </section>
-    <!-- FOOTER -->
-    <footer>
-        <span id="status-span">STATUS=[CONNECTED]</span>
-        <span id="time"></span>
-    </footer>
-
-    <!-- LOADING SCREEN -->
-    <section id="loader-wrapper">
-        <div id="loading-container">
-        <span id="loading-span">LOADING...</span>
-        <span class="loader"><span class="loader-inner"></span></span>
-    </section>
   </body>
 </html>
